# personal-cookbook

./: .gitignore  Cargo.toml  Trunk.toml  index.html  main-d97a34ccc73d814.css  main-fa73003034e53c55.css  personal-cookbook-1fe93e48a7309928.js  personal-cookbook-1fe93e48a7309928_bg.wasm  personal-cookbook-20543dae03ea0c93.js  personal-cookbook-20543dae03ea0c93_bg.wasm  personal-cookbook-78866132f8bf92c8.js  personal-cookbook-78866132f8bf92c8_bg.wasm  personal-cookbook-9aaf20473f287aa9.js  personal-cookbook-9aaf20473f287aa9_bg.wasm
src/: main.rs
src/components/: layout.rs
src/pages/: home.rs
